packages/itwinui-css/src/tabs/tabs.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@import '../utils/index';

// (12px) Between .iui-tabs and .iui-tabs-actions-wrapper
$tabs-actions-gap: var(--iui-size-s);

// (4px) Smaller min content-actions spacing for default tabs
$content-actions-min-gap-default-horizontal-tabs: var(--iui-size-2xs);
// (8px) Larger min content-actions spacing for borderless tabs
$content-actions-min-gap-borderless-horizontal-tabs: var(--iui-size-xs);
// (8px) Padding for iui-tabs (vertical tabs)
$content-actions-gap-vertical-tabs: var(--iui-size-xs);

// (44px) Min tab height for borderless tabs
$borderless-horizontal-tab-min-height: calc(
  var(--iui-size-s) * 3 + #{$content-actions-min-gap-borderless-horizontal-tabs}
);

@mixin iui-tabs-wrapper {
  display: grid;
  position: relative;
}

@mixin iui-tabs {
  @include iui-reset;
  position: relative;
  list-style: none;
  user-select: none;

  .iui-tab {
    @include iui-reset;
    font-family: inherit;
    position: relative;
    display: flex;
    align-items: center;
    font-size: var(--iui-font-size-1);
    min-height: calc(var(--iui-size-m) * 2.5);
    height: 100%;
    cursor: pointer;
    color: var(--iui-color-text);
    transition: background-color var(--iui-duration-1) ease-out;

    &.iui-active {
      color: var(--iui-color-text-accent);

      .iui-tab-icon {
        fill: currentColor;
      }

      .iui-tab-description {
        color: inherit;
      }
    }

    &[disabled] {
      cursor: not-allowed;
      color: var(--iui-color-text-disabled);

      .iui-tab-description {
        color: inherit;
      }

      .iui-tab-icon {
        fill: var(--iui-color-icon-disabled);
      }
    }

    @include iui-focus;
  }

  .iui-tab-icon {
    @include iui-icon-style('m');
    fill: var(--iui-color-icon);
    transition: fill var(--iui-duration-1) ease-out;

    + .iui-tab-label {
      margin-left: var(--iui-size-xs);
    }
  }

  .iui-tab-description {
    display: none;
    font-size: var(--iui-font-size-0);
    color: var(--iui-color-text-muted);
  }

  &.iui-green .iui-tab {
    &:focus {
      outline-color: var(--iui-color-text-positive);
    }

    &.iui-active {
      color: var(--iui-color-text-positive);

      .iui-tab-icon {
        fill: currentColor;
      }
    }
  }

  ~ .iui-tabs-content {
    padding-top: var(--iui-size-s);
    padding-bottom: var(--iui-size-s);
  }
}

@mixin iui-tab-label {
  text-align: left;
  max-width: 60ch;

  > * {
    @include iui-line-clamp(3);
  }
}

@mixin iui-tabs-horizontal {
  grid-template-areas: 'tabs tabs-actions' 'tabs-content tabs-content';
  grid-template-columns: 1fr auto;

  .iui-tabs {
    display: flex;

    &.iui-borderless {
      min-height: $borderless-horizontal-tab-min-height;
    }
  }

  .iui-tab {
    &::after {
      width: 100%;
      height: 0;
    }

    &.iui-active::after {
      height: var(--iui-size-3xs);
    }
  }
}

@mixin iui-tabs-vertical {
  grid-template-areas: 'tabs tabs-content' 'tabs-actions tabs-content';
  grid-template-columns: auto 1fr;
  grid-template-rows: 1fr auto;

  .iui-tabs {
    li,
    .iui-tab {
      width: 100%;
      white-space: nowrap;
    }

    ~ .iui-tabs-content {
      flex-grow: 1;
    }
  }

  .iui-tab {
    &::after {
      width: 0;
      height: 100%;
    }

    &.iui-active::after {
      width: var(--iui-size-3xs);
    }
  }
}

@mixin iui-tab-not-animated {
  .iui-tab::after {
    content: '';
    position: absolute;
    background-color: var(--iui-color-border-accent);
  }

  .iui-active::after {
    @media (prefers-reduced-motion: no-preference) {
      transition: width var(--iui-duration-1) ease, height var(--iui-duration-1) ease;
    }
  }

  &.iui-green .iui-tab::after {
    background-color: var(--iui-color-border-positive);
  }
}

@mixin iui-tab-animated {
  &::after {
    position: absolute;
    content: ' ';
    background-color: var(--iui-color-border-accent);
  }

  &.iui-green::after {
    background-color: var(--iui-color-border-positive);
  }

  .iui-horizontal &::after {
    top: calc(100% - #{var(--iui-size-3xs)});
    height: var(--iui-size-3xs);
    left: var(--stripe-left);
    width: var(--stripe-width);
    @media (prefers-reduced-motion: no-preference) {
      transition: width var(--iui-duration-1) ease-out, left var(--iui-duration-1) ease-out;
    }
  }

  .iui-vertical &::after {
    left: calc(100% - #{var(--iui-size-3xs)});
    width: var(--iui-size-3xs);
    top: var(--stripe-top);
    height: var(--stripe-height);
    @media (prefers-reduced-motion: no-preference) {
      transition: top var(--iui-duration-1) ease-out;
    }
  }
}

@mixin iui-tabs-actions-wrapper {
  grid-area: tabs-actions;
  display: flex;
  flex-direction: column;
  justify-content: center;

  :where(.iui-tabs-wrapper.iui-horizontal) & {
    margin-left: $tabs-actions-gap;

    &::before,
    &::after {
      content: '';
      flex: 1;
    }
  }

  // Smaller min content-actions spacing for default horizontal tabs
  :where(.iui-tabs-wrapper.iui-horizontal) :where(.iui-tabs.iui-default) + & {
    &::after {
      min-height: $content-actions-min-gap-default-horizontal-tabs;
    }
  }

  // Larger min content-actions spacing for borderless horizontal tabs
  :where(.iui-tabs-wrapper.iui-horizontal) :where(.iui-tabs.iui-borderless) + & {
    &::after {
      min-height: $content-actions-min-gap-borderless-horizontal-tabs;
    }
  }

  :where(.iui-tabs-wrapper.iui-vertical) & {
    margin-top: $tabs-actions-gap;
    padding: 0 $content-actions-gap-vertical-tabs;
  }
}

@mixin iui-tabs-actions {
  display: flex;

  :where(.iui-tabs-wrapper.iui-horizontal) & {
    align-items: center;
    column-gap: var(--iui-size-xs);
  }

  :where(.iui-tabs-wrapper.iui-vertical) & {
    flex-direction: column;
    align-items: stretch;
    row-gap: var(--iui-size-xs);
  }
}

@mixin iui-tabs-content {
  grid-area: tabs-content;
}

